feat(admin): refactor UI to top-navbar layout and fix backend correctness
- Replace left sidebar with Bootstrap top navbar (Students/Teachers/HODs links + Logout)
- Rewrite student/teacher/HOD list pages with Bootstrap tables; fix deprecated Thymeleaf fragment syntax
- Fix N+1 query in list endpoints: single findAllUsers() + Set-based filter instead of per-user DB call
- Add self-delete guard in deleteUser(): blocks admin from deleting own account
- Add null guard on deptID in saveUser(): redirects with error flash instead of NPE
- Add RedirectAttributes flash messages (successMessage/errorMessage) on save and delete
- Fix DepartmentDetails missing @GeneratedValue(IDENTITY) on AUTO_INCREMENT PK
- Add saveDepartmentDetails and deleteDepartmentDetailsByUserName to service layer
- Rewrite AdminControllerTest with @BeforeEach shared test data, lenient() stubbing, and TDD coverage for all new behaviours
- Expand UserServiceTest to cover new service methods (26 tests total)